# dataplus-mcp

./: README.md  docker-compose.yml
.claude/commands/: dataplus-trino-query.md
.claude/skills/trino/: SKILL.md
.claude/skills/trino/references/: connectors.md  functions.md  sql_language.md
mcp-server/: Dockerfile  pyproject.toml  requirements.txt  server.py  server_simple.py  trino_fastmcp.py
trino-etc/: config.properties  jvm.config
trino-etc/catalog/: example_pg.properties  tpch.properties
trino-web/: package.json  vite.config.ts
trino-web/src/: App.vue  style.css
trino-web/src/components/: CatalogTree.vue  ResultsTable.vue  SqlEditor.vue
trino-web/src/services/: TrinoService.ts
trino-web/src/types/: splitpanes.d.ts
