[project]
name = "mcp-server"
version = "0.1.0"
description = "Trino MCP Server - A Model Context Protocol server for Trino SQL queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "trino>=0.336.0",
    "uvicorn>=0.38.0",
    "fastmcp>=0.11.0",
]

[project.scripts]
mcp-server = "trino_fastmcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "trino_fastmcp.py",
]
